--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
         <junit.version>5.9.1</junit.version>
         <restassured.version>5.3.2</restassured.version>
         <testcontainers.version>1.19.5</testcontainers.version>
+        <hamcrest.version>2.0.0.0</hamcrest.version>
+        <restassured.version>5.3.0</restassured.version>
+        <!-- Project properties  -->
+        <!--  token    -->
+        <secret.key>841D8A6C80CBA4FCAD32D5367C18C53B</secret.key>
+        <issuer>cphbusiness.dk</issuer>
+        <token.expiration.time>3600000</token.expiration.time>
+        <!--  DB    -->
+        <db.name>hoteldb</db.name>
+        <db.username>postgres</db.username>
+        <db.password>postgres</db.password>
+        <db.connection.string>jdbc:postgresql://localhost:5432/</db.connection.string>
     </properties>
 
     <dependencies>
@@ -153,6 +165,44 @@
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
             <version>5.5.0</version>
+        </dependency>
+        <!--        https://www.baeldung.com/hamcrest-core-matchers-->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--        https://www.baeldung.com/rest-assured-tutorial-->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${restassured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${restassured.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--   Security     -->
+        <dependency>
+            <!--  https://nimbusds.com/products/nimbus-jose-jwt   -->
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>9.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.java-json-tools</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>2.2.14</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
